# promgen

./: .buildinfo  .dockerignore  .git-blame-ignore-revs  .gitignore  .rubocop.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Gemfile  Installation Guide  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  NOTICE  Pipfile  README.md  Rakefile  SECURITY.md  circle.yml  codecov.yml  config.ru  config.sample.yml  docker-compose.yml  erd.puml  genindex.html  http-routingtable.html  index.html  manage.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.circleci/: config.yml
.doctrees/: environment.pickle  index.doctree
.doctrees/conf/: alert.doctree  django.doctree  docker.doctree  index.doctree  prometheus.doctree  web.doctree
.doctrees/modules/: discovery.doctree  index.doctree  models.doctree  notification.doctree  prometheus.doctree  tags.doctree
.doctrees/plugin/: auth.doctree  discovery.doctree  index.doctree  notification.doctree
.doctrees/user/: admin.doctree  api.doctree  index.doctree  notifications.doctree  rules.doctree  terms.doctree
.github/: CODEOWNERS
.github/workflows/: check.yml  django.yml  docker.yml  sphinx.yml  stale.yml
_modules/: index.html
_modules/promgen/: models.html  notification.html  prometheus.html
_sources/: index.rst.txt
_sources/conf/: django.rst.txt  docker.rst.txt  web.rst.txt
_sources/user/: rules.rst.txt
_static/: documentation_options.js
conf/: alert.html  django.html  docker.html  index.html  prometheus.html  web.html
data/: sample-webhook.json
docker/: alertmanager.yml  docker-entrypoint.sh  prometheus.yml  requirements.in  requirements.txt  settings.yaml
docker/backend/: docker-compose.yml
docs/: Makefile  conf.py  django-conf.rst  docker.rst  extending.rst  index.rst  requirements.txt  rules.rst  sender.md  terms.rst  worker.rst
docs/_templates/: navigation.html
docs/conf/: alert.rst  django.rst  index.rst  notification.rst  prometheus.rst
docs/modules/: discovery.rst  index.rst  models.rst  notification.rst  prometheus.rst  sender.rst  tags.rst
docs/plugin/: auth.rst  discovery.rst  index.rst  notification.rst
docs/user/: admin.rst  api.rst  index.rst  notifications.rst  permissions.rst  queue.rst  rules.rst  terms.rst
lib/: injector.rb  promgen.rb
lib/promgen/: alert.rb  api.rb  config_writer.rb  farm.rb  farm_config.rb  host.rb  migrator.rb  project.rb  project_exporter.rb  project_farm.rb  prometheus.rb  rule.rb  rule_writer.rb  service.rb  web.rb
licenses/: LICENSE.jquery.select.mit.txt  LICENSE.luxon.mit.txt
migrations/: 10_audit_log.rb  11_metrics_path.rb  12_project.rb  13_rule_text_length.rb  1_init.rb  2_phase_name.rb  3_farm_web.rb  4_rule.rb  5_exporter.rb  6_service.rb  7_project.rb  8_webhook.rb  9_rule_service.rb
modules/: discovery.html  index.html  models.html  notification.html  prometheus.html  tags.html
plugin/: auth.html  discovery.html  index.html  notification.html
primevue-gen/: .eslintrc.js  .prettierrc.json  build.js  package.json
primevue-gen/src/: main.js
promgen/: __init__.py  actions.py  admin.py  apps.py  celery.py  checks.py  context_processors.py  errors.py  filters.py  forms.py  manage.py  metrics.py  middleware.py  mixins.py  models.py  permissions.py  plugins.py  prometheus.py  proxy.py  remote.py  renderers.py  rest.py  rest_v2.py  schemas.py  serializers.py  server.py  settings.py  shortcuts.py  signals.py  tasks.py  urls.py  util.py  validators.py  version.py  views.py  wsgi.py
promgen/discovery/: __init__.py  default.py
promgen/fixtures/: exporters.yaml  extras.yaml  testcases-prometheus.yaml  testcases.yaml
promgen/migrations/: 0001_initial.py  0001_squashed_0044_common-rules.py  0002_audit.py  0002_auto_20180316_0525.py  0003_alert_queue.py  0003_default-group.py  0003_setting.py  0004_auto_20161019_0755.py  0004_merge_20180905_0247.py  0005_exporter_options.py  0005_project_owner.py  0005_sender.py  0006_auto_20161019_1214.py  0006_exporter_options.py  0007_auto_20161020_0253.py  0007_message_filter.py  0008_auto_20161020_0528.py  0008_shard_service.py  0009_auto_20161021_0640.py  0009_blackbox-module.py  0010_app_label_migration.py  0010_auto_20161025_0034.py  0011_auto_20161025_0737.py  0011_disable_host.py  0011_notifier_counts.py  0012_auto_20161027_0306.py  0012_validation_updates.py  0013_auto_20161027_0307.py  0013_rename_job.py  0013_validation_fix.py  0014_exporter_scheme.py  0014_stat.py  0015_delete_stat.py  0015_internal.py  0016_alertlabel.py  0016_auto_20161121_0714.py  0017_alter_alertlabel_field.py  0017_auto_20161215_2352.py  0018_default_exporter_scheme.py  0018_rule_enabled.py  (+72 more)
promgen/notification/: __init__.py  alertmanager.py  email.py  ikasan.py  linenotify.py  pagerduty.py  slack.py  user.py  webhook.py
promgen/sender/: __init__.py  email.py  ikasan.py  linenotify.py  webhook.py
promgen/templates/: 404.html  500.html  base.html
promgen/templatetags/: promgen.py
promgen/tests/: __init__.py  alertmanager.json  test_actions.py  test_alert_rules.py  test_api.py  test_cli.py  test_email.py  test_forms.py  test_host_add.py  test_ikasan.py  test_linenotify.py  test_metrics.py  test_mixins.py  test_models.py  test_prometheus.py  test_renderers.py  test_rest.py  test_routes.py  test_rules.py  test_signals.py  test_silence.py  test_slack.py  test_user_email.py  test_util.py  test_web.py  (+1 more)
scripts/: farm_load.rb
test/: test_helper.rb
user/: admin.html  api.html  index.html  notifications.html  rules.html  terms.html
views/: add_host.erb  api.erb  audit_log.erb  create_project.erb  edit_farm.erb  error.erb  layout.erb  link_project.erb  list_project.erb  list_rule.erb  list_server_directory.erb  list_service.erb  list_services.erb  register_farm.erb  register_project_exporter.erb  register_rule.erb  register_server_directory.erb  register_service.erb  show_farm_host.erb  show_project.erb  show_rule.erb  show_service.erb  status.erb  update_line_notify_access_token.erb  update_project.erb  update_rule.erb  update_server_directory.erb
(+390 files in other folders)
