[metadata]
name = promgen
author = LINE Corporation
author_email = dl_oss_dev@linecorp.com
long_description_content_type = text/markdown
long_description = file:README.md
url = https://github.com/line/promgen
version = attr: promgen.version.__version__
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP

project_urls =
    Source = https://github.com/line/promgen
    Tracker = https://github.com/line/promgen/issues
    Documentation = https://line.github.io/promgen/

[options]
packages = find:
install_requires =
    atomicwrites==1.3.0
    celery==4.3.0
    django-environ
    django-filter
    Django>=3.2,<4.0
    djangorestframework==3.11.2
    envdir
    kombu==4.6.3
    prometheus-client==0.7.0
    python-dateutil==2.8.0
    pyyaml==5.4
    requests==2.25.1
    sentry_sdk
    social-auth-app-django >= 2.0.0
include_package_data = True

[options.packages.find]
exclude = test

[options.entry_points]
console_scripts =
    promgen = promgen.manage:main
promgen.discovery =
    promgen = promgen.discovery.default:DiscoveryPromgen
promgen.notification =
    email = promgen.notification.email:NotificationEmail
    linenotify = promgen.notification.linenotify:NotificationLineNotify
    slack = promgen.notification.slack:NotificationSlack
    user = promgen.notification.user:NotificationUser
    webhook = promgen.notification.webhook:NotificationWebhook

[options.extras_require]
dev =
    black
    codecov
    django-nose
    flake8
    nose-cov
    unittest-xml-reporting
docs =
    Sphinx
    sphinxcontrib-httpdomain
mysql = mysqlclient==1.4.2

[nosetests]
cover-html = 1
cover-xml = 1
cover-html-dir = dist/cover
cover-package = promgen
with-coverage = 1

[flake8]
ignore = E501
exclude = migrations

[isort]
float_to_top = true
forced_separate = django,promgen
known_django = django
known_first_party = promgen
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[codespell]
skip = *.min.js,*.min.css,*.css.map,.venv,dist,.git
