[metadata]
name = promgen
author = LINE Corporation
author_email = dl_oss_dev@linecorp.com
long_description_content_type = text/markdown
long_description = file:README.md
url = https://github.com/line/promgen
version = attr: promgen.version.__version__
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP

project_urls =
    Source = https://github.com/line/promgen
    Tracker = https://github.com/line/promgen/issues
    Documentation = https://line.github.io/promgen/

[options]
python_requires = >=3.9
packages = find:
install_requires =
    atomicwrites
    celery==4.3.0
    django-environ
    django-filter
    Django~=3.2
    djangorestframework
    envdir
    kombu
    prometheus-client
    python-dateutil
    pyyaml
    requests
    social-auth-app-django >= 2.0.0
include_package_data = True

[options.packages.find]
exclude = test

[options.entry_points]
console_scripts =
    promgen = promgen.manage:main
promgen.discovery =
    promgen = promgen.discovery.default:DiscoveryPromgen
promgen.notification =
    email = promgen.notification.email:NotificationEmail
    linenotify = promgen.notification.linenotify:NotificationLineNotify
    slack = promgen.notification.slack:NotificationSlack
    user = promgen.notification.user:NotificationUser
    webhook = promgen.notification.webhook:NotificationWebhook

[options.extras_require]
dev =
    black
    codecov
    flake8
    unittest-xml-reporting
docs =
    Sphinx
    sphinxcontrib-httpdomain
mysql = mysqlclient==1.4.2
